# Mprpc_project

./: CMakeLists.txt  README.md  autobuild.sh  muduo_test.cpp
example/: Makefile  cmake_install.cmake  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  Makefile  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  Makefile  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc
src/include/: mprpcapplication.h  mprpcchannel.h  rpcprovider.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
